// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Date renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ jbDlzq"
    disabled={true}
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo dqpabq"
      disabled={true}
      placeholder=" "
      type="date"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ jbDlzq"
    disabled={true}
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo eFgkVp"
      disabled={true}
      placeholder=" "
      type="date"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ jbDlzq"
    disabled={true}
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo KGXRn"
        disabled={true}
        placeholder=" "
        type="date"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Date renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo foaEFs"
      placeholder="Placeholder"
      type="date"
    />
    <p
      className="sc-bkrxz fwlxzw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo fZOEPn"
      placeholder="Placeholder"
      type="date"
    />
    <p
      className="sc-bkrxz fwlxzw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo bEGoiJ"
        placeholder="Placeholder"
        type="date"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz fwlxzw"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Date renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo dqpabq"
      placeholder=" "
      readOnly={true}
      type="date"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo eFgkVp"
      placeholder=" "
      readOnly={true}
      type="date"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo KGXRn"
        placeholder=" "
        readOnly={true}
        type="date"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Date renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo dqpabq"
      placeholder="Placeholder"
      type="date"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo eFgkVp"
      placeholder="Placeholder"
      type="date"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo KGXRn"
        placeholder="Placeholder"
        type="date"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Date renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo dqpabq"
      placeholder="Placeholder"
      type="date"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo eFgkVp"
      placeholder="Placeholder"
      type="date"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo KGXRn"
        placeholder="Placeholder"
        type="date"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-QmDjo bRgpKI"
      dir="rtl"
      placeholder="Placeholder"
      type="date"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-QmDjo boewrj"
      dir="rtl"
      placeholder="Placeholder"
      type="date"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo gVAIQx"
        dir="rtl"
        placeholder="Placeholder"
        type="date"
      />
      <label
        className="sc-fduepK gfcqQs"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <input
      className="sc-QmDjo dqpabq"
      placeholder="medium"
      type="date"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <input
      className="sc-QmDjo eFgkVp"
      placeholder="large"
      type="date"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo hboaBK"
        placeholder="xlarge"
        type="date"
      />
      <label
        className="sc-fduepK lgGcoP"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo eefKuh"
      placeholder="Placeholder"
      type="date"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo fzqtXe"
      placeholder="Placeholder"
      type="date"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV libhLy"
    >
      <input
        className="sc-QmDjo KGXRn"
        placeholder="Placeholder"
        type="date"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
